--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -37,7 +37,7 @@ body,
   align-items: center;
   width: 100%;
   height: 100%;
-  padding-top: 100px;
+  padding-top: 120px;
   padding-bottom: 80px;
 }
 
@@ -114,6 +114,29 @@ body,
   overflow: auto;
   width: 100%;
   height: 100%;
+}
+
+.toolbar-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 120px;
+  align-items: flex-end;
+}
+
+.toolbar {
+  text-align: right;
+  width: 800px;
+  padding: 20px 0;
+}
+
+.action {
+  font-weight: 300;
+  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
+  padding: 5px 10px;
+  font-size: .7rem;
+  text-transform: uppercase;
 }
 
 @media screen and (max-width: 768px) {
