--- a/src/group/GroupProfile.css
+++ b/src/group/GroupProfile.css
@@ -1,9 +1,11 @@
 .group-profile {
   display: flex;
-  margin: 60px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  min-height: 300px;
+  height: 50vh;
+  padding-top: 100px;
 }
 
 .group-image {
@@ -31,16 +33,30 @@
   height: 1.5rem;
 }
 
-@media screen and (max-aspect-ratio: 3/2) {
+.group-page__header {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (max-aspect-ratio: 2/3) {
   .group-profile {
-    height: 360px;
+    height: 100vw;
+    padding-top: 0;
   }
 
   .group-image {
-    transform: scale(.9);
+    transform: scale(.7);
   }
 
   .group-name {
     font-size: 1.2rem;
+  }
+
+  .group-activity {
+    display: none;
   }
 }
