--- a/src/AppRoot/styles/theme.css
+++ b/src/AppRoot/styles/theme.css
@@ -108,14 +108,14 @@ a:hover {
   color: $accent-text-color;
 }
 
-.group-page {
+.Group {
   position: relative;
   width: 100%;
   height: 100%;
   background-color: $primary-color;
 }
 
-.group-page__content {
+.Group__content {
   background-color: white;
 }
 
