--- a/src/shared/UserProfile/UserProfile.css
+++ b/src/shared/UserProfile/UserProfile.css
@@ -1,15 +1,15 @@
-.profile {
+.UserProfile {
   display: flex;
   align-items: center;
 }
 
-.profile__pic {
+.UserProfile__pic {
   border-radius: 50%;
   width: 40px;
   height: 40px;
 }
 
-.profile__name {
+.UserProfile__name {
   font-size: .9rem;
   font-weight: 300;
   margin: 0 10px;
