--- a/src/MusicApp/styles/base.css
+++ b/src/MusicApp/styles/base.css
@@ -74,6 +74,17 @@ body,
   text-transform: uppercase;
 }
 
+.layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 @media screen and (max-width: 768px) {
   .Group__content {
     padding-top: 15px;
