--- a/src/shared/PlayerView.css
+++ b/src/shared/PlayerView.css
@@ -7,7 +7,7 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   background-color: white;
   border-radius: 2px;
-  padding: 50px 20px;
+  padding: 50px 0;
 }
 
 .PlayerView__top {
