--- a/src/shared/PlayerView.css
+++ b/src/shared/PlayerView.css
@@ -22,14 +22,14 @@
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 1px solid red;
-  background-color: white;
+  border: 3px solid white;
+  background-color: #333;
 }
 
 .PlayerView__visualization {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 20px;
   height: 150px;
   width: 100%;
 }
