--- a/src/shared/PlayerView.css
+++ b/src/shared/PlayerView.css
@@ -5,9 +5,10 @@
   width: 400px;
   height: 500px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  background-color: white;
+  background-color: #FD76B3;
   border-radius: 2px;
-  padding: 50px 0;
+  padding: 100px 0;
+  color: white;
 }
 
 .PlayerView__top {
@@ -22,8 +23,8 @@
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  border: 3px solid white;
-  background-color: #333;
+  border: 2px solid white;
+  background-color: #555;
 }
 
 .PlayerView__visualization {
@@ -41,4 +42,5 @@
   align-items: center;
   flex-direction: column;
   font-weight: 300;
+  font-size: 0.8rem;
 }
