--- a/src/shared/PlayerView.css
+++ b/src/shared/PlayerView.css
@@ -2,9 +2,14 @@
   position: fixed;
   bottom: 20px;
   left: 30px;
+  overflow: hidden;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
+}
+
+.PlayerView-b {
+  position: relative;
   width: 400px;
   height: 500px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   background-color: #FD76B3;
   border-radius: 2px;
   padding: 100px 0;
