--- a/src/MusicApp/Player.css
+++ b/src/MusicApp/Player.css
@@ -1,4 +1,4 @@
-.PlayerView {
+.Player {
   position: fixed;
   bottom: 20px;
   left: 30px;
@@ -6,7 +6,7 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
 }
 
-.PlayerView-b {
+.Player-b {
   position: relative;
   width: 500px;
   height: 700px;
@@ -16,14 +16,14 @@
   color: white;
 }
 
-.PlayerView__top {
+.Player__top {
   display: flex;
   justify-content: center;
   position: relative;
   width: 100%;
 }
 
-.PlayerView__audio {
+.Player__audio {
   position: relative;
   width: 150px;
   height: 150px;
@@ -32,7 +32,7 @@
   background-color: #555;
 }
 
-.PlayerView__visualization {
+.Player__visualization {
   position: absolute;
   top: 0;
   left: 20px;
@@ -40,7 +40,7 @@
   width: 100%;
 }
 
-.PlayerView__info {
+.Player__info {
   width: 100%;
   margin-top: 20px;
   display: flex;
